--- a/workspace/final_project/designs/baseline/baseline_sparse_opt.yaml
+++ b/workspace/final_project/designs/baseline/baseline_sparse_opt.yaml
@@ -10,6 +10,8 @@ sparse_optimizations:
               - format: UOP
                 payload_word_bits: 0
               - format: UOP
+                payload_word_bits: 0
+              - format: UOP
                 payload_word_bits: 4
                 flattened_rankIDs: [[M]]
               - format: RLE
