--- a/workspace/final_project/designs/baseline/baseline_sparse_opt.yaml
+++ b/workspace/final_project/designs/baseline/baseline_sparse_opt.yaml
@@ -26,27 +26,27 @@ sparse_optimizations:
                 metadata_word_bits: 4
                 flattened_rankIDs: [[N]]
 
-    - target: glb
-      representation_format:
-        data_spaces:
-          - name: Inputs
-            ranks:
-              - format: UOP
-                payload_word_bits: 0
-              - format: UOP
-                payload_word_bits: 0
-                flattened_rankIDs: [[M]]
-              - format: RLE
-                metadata_word_bits: 4
-                flattened_rankIDs: [[K]]
-          - name: Weights
-            ranks:
-              - format: UOP
-                payload_word_bits: 4
-                flattened_rankIDs: [[K]]
-              - format: RLE
-                metadata_word_bits: 4
-                flattened_rankIDs: [[N]]
+    # - target: glb
+    #   representation_format:
+    #     data_spaces:
+    #       - name: Inputs
+    #         ranks:
+    #           - format: UOP
+    #             payload_word_bits: 0
+    #           - format: UOP
+    #             payload_word_bits: 0
+    #             flattened_rankIDs: [[M]]
+    #           - format: RLE
+    #             metadata_word_bits: 4
+    #             flattened_rankIDs: [[K]]
+    #       - name: Weights
+    #         ranks:
+    #           - format: UOP
+    #             payload_word_bits: 4
+    #             flattened_rankIDs: [[K]]
+    #           - format: RLE
+    #             metadata_word_bits: 4
+    #             flattened_rankIDs: [[N]]
 
     - target: iact_spad
       representation_format:
@@ -65,6 +65,8 @@ sparse_optimizations:
         data_spaces:
           - name: Weights
             ranks:
+              - format: UOP
+                payload_word_bits: 0
               - format: UOP
                 payload_word_bits: 7
                 flattened_rankIDs: [[K]]
